--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gdown==4.6.4
 imageio==2.26.0
 numpy==1.22.3
 opencv_python==4.6.0.66
@@ -7,4 +8,4 @@ torch==1.13.1
 torchvision==0.14.1
 tqdm==4.64.0
 pillow-avif-plugin==1.3.1
-gdown
+openpyxl
